<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPatrios"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imagenPortada"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/patriota"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/txtTituloP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Poemas Patrios"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        />
    <TextView
        android:id="@+id/txtTituloS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Patria Mia"
        android:layout_margin="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="30sp"
        />

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="140sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtContenido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPatrios"
                    android:textIsSelectable="true"
                    android:layout_margin="10sp"
                    android:layout_marginTop="30sp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

            </LinearLayout>


    </ScrollView>
    <TextView
        android:id="@+id/txtTituloS2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="La independencia"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="30sp"
        />

    <ScrollView
        android:id="@+id/ScrollView2"
        android:layout_width="match_parent"
        android:layout_height="140sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtContenido2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPatrios2"
                android:textIsSelectable="true"
                android:layout_margin="10sp"
                android:gravity="center"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/txtTituloS3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="A mi Patria querida"
        android:layout_margin="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="30sp"
        />
    <ScrollView
        android:id="@+id/ScrollView3"
        android:layout_width="match_parent"
        android:layout_height="140sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtContenido3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtPatrios3"
                android:textIsSelectable="true"
                android:layout_margin="10sp"
                android:gravity="center"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>